// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display a form with empty field values 1`] = `
<div>
  <form>
    <label
      for="date_start"
    >
      Start Date:
    </label>
    <input
      name="date_start"
      type="date"
      value=""
    />
    <label
      for="date_end"
    >
      End Date:
    </label>
    <input
      name="date_end"
      type="date"
      value=""
    />
    <label
      for="hourly_rate"
    >
      Hourly Rate:
    </label>
    <input
      name="hourly_rate"
      type="text"
      value=""
    />
    <label
      for="hours_worked"
    >
      Hours Worked:
    </label>
    <input
      name="hours_worked"
      type="text"
      value=""
    />
    <label
      for="URL"
    >
      URL:
    </label>
    <input
      name="URL"
      type="text"
      value=""
    />
    <label
      for="description"
    >
      Description:
    </label>
    <input
      name="description"
      type="text"
      value=""
    />
    <label
      for="completed_at"
    >
      Completed At:
    </label>
    <input
      name="completed_at"
      type="date"
      value=""
    />
    <label
      for="price_quoted"
    >
      Price Quoted:
    </label>
    <input
      name="price_quoted"
      type="text"
      value=""
    />
    <label
      for="hours_quoted"
    >
      Hours Quoted:
    </label>
    <input
      name="hours_quoted"
      type="text"
      value=""
    />
    <label
      for="title"
    >
      Title:
    </label>
    <input
      name="title"
      type="text"
      value=""
    />
    <label
      for="notes"
    >
      Notes:
    </label>
    <input
      name="notes"
      type="text"
      value=""
    />
    <label
      for="client_id"
    >
      Client: 
    </label>
    <select
      name="client_id"
    >
      <option
        value=""
      >
        required
      </option>
      <option
        value="1"
      >
        person1
      </option>
      <option
        value="2"
      >
        person2
      </option>
    </select>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`should display a form with provided values 1`] = `
<div>
  <form>
    <label
      for="date_start"
    >
      Start Date:
    </label>
    <input
      name="date_start"
      type="date"
      value="2022-01-20"
    />
    <label
      for="date_end"
    >
      End Date:
    </label>
    <input
      name="date_end"
      type="date"
      value="2022-01-21"
    />
    <label
      for="hourly_rate"
    >
      Hourly Rate:
    </label>
    <input
      name="hourly_rate"
      type="text"
      value="30"
    />
    <label
      for="hours_worked"
    >
      Hours Worked:
    </label>
    <input
      name="hours_worked"
      type="text"
      value="50"
    />
    <label
      for="URL"
    >
      URL:
    </label>
    <input
      name="URL"
      type="text"
      value="some@url.com"
    />
    <label
      for="description"
    >
      Description:
    </label>
    <input
      name="description"
      type="text"
      value="testing"
    />
    <label
      for="completed_at"
    >
      Completed At:
    </label>
    <input
      name="completed_at"
      type="date"
      value="2022-01-21"
    />
    <label
      for="price_quoted"
    >
      Price Quoted:
    </label>
    <input
      name="price_quoted"
      type="text"
      value="4000"
    />
    <label
      for="hours_quoted"
    >
      Hours Quoted:
    </label>
    <input
      name="hours_quoted"
      type="text"
      value="100"
    />
    <label
      for="title"
    >
      Title:
    </label>
    <input
      name="title"
      type="text"
      value="testing"
    />
    <label
      for="notes"
    >
      Notes:
    </label>
    <input
      name="notes"
      type="text"
      value="testing"
    />
    <label
      for="client_id"
    >
      Client: 
    </label>
    <select
      name="client_id"
    >
      <option
        value=""
      >
        required
      </option>
      <option
        value="1"
      >
        person1
      </option>
      <option
        value="2"
      >
        person2
      </option>
    </select>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;
